--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 <body>
     <div class="container">
         <h1>Rock Paper Scissors</h1>
+        <h2>Welcome to my first game made in JavaScript !</h2>
         <div class="inputs">
             <input type="button" value="Rock" class="rock"></input>
             <input type="button" value="Paper" class="paper"></input>
             <input type="button" value="Scissors" class="scissors"></input>
+        </div>
+        <div class="buttontxt">
+            <p class="r">Rock</p>
+            <p class="p">Paper</p>
+            <p class="s">Scissors</p>
         </div>
         <div class='para'>
             <p class='para1'></p>
