--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
             <p class='para3'></p>
         </div>
     </div>
+    <audio class="bgmusic" src="Sounds/music.mp3" autoplay="autoplay" loop="loop"></audio>
+    <audio class="stefan" src="Sounds/stefan.mp3"></audio>
+    <audio class="igzo" src="Sounds/igzo.mp3"></audio>
+    <audio class="miki" src="Sounds/miki.mp3"></audio>
 </body>
 </html>
